# devrelay

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml
devrelay/: __init__.py  __main__.py  addons.py  cli.py  config.py  proxy.py
tests/: __init__.py  test_addons.py  test_config.py  test_devrelay.py  test_proxy.py
